--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "date-fns": "^3.3.1",
     "expo": "~50.0.5",
     "expo-status-bar": "~1.11.1",
+    "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-native": "0.73.2",
     "react-native-linear-gradient": "^2.8.3",
